# opensim-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  hyfydy_muscle.m  hyfydy_muscle.py  pendulum.osim
.github/workflows/: build_all_wheels.yml  continuous_integration.yml
Bindings/: CMakeLists.txt  OpenSimHeaders_simulation.h  simbody.i  simulation.i
Bindings/Python/tests/: test_moco.py
Bindings/SWIGSimTK/: MobilizedBody.h  MobilizedBody_CantileverFreeBeam.h  MobilizedBody_Ellipsoid.h  MobilizedBody_FunctionBased.h  SimbodyMatterSubsystem.h
OpenSim/: CMakeLists.txt
OpenSim/Actuators/: ActivationCoordinateActuator.h  HyfydyMuscle.cpp  HyfydyMuscle.h  MeyerFregly2016Muscle.cpp  MeyerFregly2016Muscle.h  PolynomialPathFitter.cpp  PolynomialPathFitter.h
OpenSim/Actuators/Test/: testDeGrooteFregly2016Muscle.cpp  testPolynomialPathFitter.cpp
OpenSim/Common/: Array.h  IO.cpp  MarkerData.cpp  Object.cpp  Object.h
OpenSim/Examples/: CMakeLists.txt
OpenSim/Examples/Wrapping/: CMakeLists.txt  exampleScholz2015GeometryPath.cpp
OpenSim/Moco/: MocoProblemRep.cpp
OpenSim/Moco/Test/: CMakeLists.txt  testMocoConstraints.cpp  testMocoContact.cpp  testMocoGoals.cpp  testMocoImplicit.cpp  (+1 more)
OpenSim/Sandbox/: CMakeLists.txt
OpenSim/Sandbox/Gait3D/: CMakeLists.txt  DiscreteController.cpp  DiscreteController.h  MobilityLinearDamper.cpp  MobilityLinearDamper.h  MobilityLinearStop.cpp  MobilityLinearStop.h  PointBasedPath.cpp  PointBasedPath.h  PointPathMuscle.cpp  PointPathMuscle.h  Rajagopal22MusclesContact.osim  RajagopalContact.osim  compare_trajectories.py  sandboxDoublePendulum.cpp  sandboxGait3D.cpp  sandboxRajagopal.cpp
OpenSim/Simulation/: MomentArmSolver.cpp  RegisterTypes_osimSimulation.cpp  SimulationUtilities.cpp  SimulationUtilities.h  osimSimulation.h
cmake/: FindMatlab.cmake
dependencies/: CMakeLists.txt  CMakePresets.json
(+78 files in other folders)
